fix overflow

--- a/maquetas/gestion_interna/principal/principal.css
+++ b/maquetas/gestion_interna/principal/principal.css
@@ -1,5 +1,6 @@
 .-header {
     padding: 40px;
+    padding-left: 80px;
     display: flex;
     justify-content: space-between;
 }
